fix z-index on add this event button

--- a/public/less/app/Navbar.less
+++ b/public/less/app/Navbar.less
@@ -7,7 +7,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  z-index: 1;
+  z-index: 2;
   background-color: @bevy-green;
   height: 68px;
   box-shadow: 0px 1px 4px rgba(0,0,0,.3);
