--- a/public/less/post/Event.less
+++ b/public/less/post/Event.less
@@ -40,7 +40,7 @@
         .addthisevent-drop {
           border: none;
           box-shadow: none;
-          z-index: 0 !important;
+          z-index: 1 !important;
           &:active, &:hover {
             top: 0px;
             border: none;
